--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Charles Venson Orozco</title>
-    <link rel="stylesheet" href="/cv2/css/styles.css">
+    <link rel="stylesheet" href="cv2/css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
   </head>
